@@ -9,32 +9,27 @@ import java.util.Map;
 
 public interface CartDAO {
     void delete(Cart cart);
-
     Cart save(Cart cart);
-
     List<Cart> findByCustomerId(String customerId);
 
     class Fake implements CartDAO {
-        private Map<String, Cart> cartStore = new HashMap<>();
+        private final Map<String, Cart> cartStore = new HashMap<>();
 
         @Override
         public void delete(Cart cart) {
-            cartStore.remove(cart.customerId);
+            cartStore.remove(cart.getCustomerId());
         }
 
         @Override
         public Cart save(Cart cart) {
-            return cartStore.put(cart.customerId, cart);
+            cartStore.put(cart.getCustomerId(), cart);
+            return cart;
         }
 
         @Override
         public List<Cart> findByCustomerId(String customerId) {
             Cart cart = cartStore.get(customerId);
-            if (cart != null) {
-                return Collections.singletonList(cart);
-            } else {
-                return Collections.emptyList();
-            }
+            return cart != null ? List.of(cart) : Collections.emptyList();
         }
     }
 }
